[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quant-engine"
version = "0.1.0"
description = "量化交易平台 - A股日频交易系统"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Quant Engine Team" }
]
keywords = ["quant", "trading", "stock", "A-share"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "typer>=0.9.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "pyyaml>=6.0",
    "loguru>=0.7",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.5",
]
browser = [
    "playwright>=1.40",
]
qmt = [
    # xtquant 需要单独安装，不在 PyPI 上
]

[project.scripts]
quant-engine = "quant_engine.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/quant_engine"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/config",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
