[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-engine"
version = "0.1.0"
description = "A股量化交易平台"
requires-python = ">=3.10"
dependencies = [
    "easytrader>=0.22",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[project.scripts]
quant = "runtime.cli:main"

[tool.setuptools.packages.find]
include = ["common*", "trading*", "runtime*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
